2009-10-10  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12129 (follow-up to bug #11986): Translation update broken with activated output compression (thanks to Steffen Gebert)

2009-09-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11433: touch(): Utime failed in install tool (thanks to Steffen Gebert)

2009-09-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.2.9

2009-09-20  Francois Suter  <francois@typo3.org>

	* Fixed bug #11995: Prompt for keyboard input does not get displayed in CLI scripts
	* Fixed bug #11224: Special menu directory only renders 1st level if special.value is a mount point (Thanks to Xavier Perseguers)

2009-09-19  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11986: dynamic update of translation status im EM is broken

2009-09-17  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #9270: Editors can´t undelete records in history (thanks to Christian Hernmarck)

2009-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11915: htmlArea RTE: superfluous span tags in content after server-based cleaning on paste operation
	* Updated htmlArea RTE version to 1.7.12 (branch TYPO3_4-2)
	* Follow-up to bug #11946: htmlArea RTE: reference was made to context menu item after context menu was closed

2009-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11847: htmlArea RTE displays empty editing area in Opera 10
	* Fixed bug #11946: htmlArea RTE: table properties editing dialogue windows loose focus after opening in IE8

2009-09-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11845: Typo in a CLI error mesage: suue -> sure (thanks to Oliver Klee)

2009-08-26  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11731: ENABLE_INSTALL_TOOL file check in yellow box does not check the file age (thanks to Moreno Feltscher)

2009-08-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11716: Install Tool always sets TYPO3_CONF_VARS[FE][disableNoCacheParameter] upon save

2009-08-14  Michael Stucki  <michael@typo3.org>
