@@ -1,3 +1,7 @@
+2009-10-11  Rupert Germann  <rupi@gmx.li>
+
+	* Fixed bug #10971: Fatal error in impexp module: Call to a member function includeLLFile() on a non-object (thanks to Andre Steiling)
+
 2009-10-10  Rupert Germann  <rupi@gmx.li>
 
 	* Fixed bug #12129 (follow-up to bug #11986): Translation update broken with activated output compression (thanks to Steffen Gebert)
